crystal-facet-uml (1.27.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Tx/Rx for component ports and activity pins introduced
  * control flow pseudostate for state entry and exit added
  * risk of nullpointer errors reduced when opening new db with old program
  * test case added to check for upwards compatibility of types at xmi export
  * use cases have uml:ExtensionPoints now

 -- Andreas Warnke <cfu@andreaswarnke.de>  ********************************

crystal-facet-uml (1.26.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * XMI Export: destination end of messages had fix enclosingInteraction=90001
  * XMI Export: Properties have attributes class and interface if applicable
  * XMI Export: Warnings are issued at illegal relationship end types
  * XMI Export: dependencies of comments to annotatedElements conform to spec
  * XMI Export: associations and communication paths can connect to ports
  * XMI Export: nested activities are exported as StructuredActivityNode
  * icons beautified
  * program renamed from crystal_facet_uml to crystal-facet-uml

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 19 Dec 2020 21:30:00 +0100

crystal-facet-uml (1.26.0) UNRELEASED; urgency=medium

  [ Olaf Hering ]
  * CMakeLists adapted to find pangocairo (Closes: #2)

  [ Mike Gabriel ]
  * Grammar fixes in applicatenclosingInteractionion messages

  [ Andreas Warnke ]
  * xmi export exports sequence, timing, communication and interaction overview
  * xmi export creates property-elements at association-member-ends
  * system boundary renamed to subsystem (to match uml 2.5.1 spec)
  * The default relationship type between lifelines is a synchronous call

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 22 Nov 2020 16:30:00 +0100

crystal-facet-uml (1.25.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * cmake does not depend on c++ compiler anymore

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 29 Oct 2020 20:30:00 +0100
