@@ -4,7 +4,7 @@
          xmlns:xmi="http://www.omg.org/spec/XMI/20110701"
          xmlns:SysML="http://www.omg.org/spec/SysML/20131001/SysML.xmi">
          <!-- XMI 2.4.1, UML 2.4.1, SysML 1.4 -->
-    <xmi:Documentation exporter="crystal_facet_uml" exporterVersion="1.26.1"/>
+    <xmi:Documentation exporter="crystal-facet-uml" exporterVersion="1.27.0"/>
     <uml:Model xmi:type="uml:Model" xmi:id="00000" name="export_test_16_requirement" >
         <packagedElement xmi:type="uml:Class" xmi:id="60001" name="Startup Time" ><!--C0001-->
         </packagedElement>
@@ -35,34 +35,34 @@
             </packagedElement>
         </packagedElement>
     </uml:Model>
-    <SysML:Requirement xmi:id="160001" base_Class="60001" >
+    <SysML:Requirement xmi:id="160001" base_NamedElement="60001" >
         <id>160001</id>
         <text>
             The system shall start up in 3 seconds
         </text>
     </SysML:Requirement>
-    <SysML:Requirement xmi:id="160003" base_Class="60003" >
+    <SysML:Requirement xmi:id="160003" base_NamedElement="60003" >
         <id>160003</id>
         <text>
             The system shall reboot in 4 seconds
         </text>
     </SysML:Requirement>
     <StandardProfile:Trace xmi:id="180001" base_Abstraction="80001" />
-    <SysML:Requirement xmi:id="160002" base_Class="60002" >
+    <SysML:Requirement xmi:id="160002" base_NamedElement="60002" >
         <id>160002</id>
         <text>
             The controller-hardware shall initialize in 1 second
         </text>
     </SysML:Requirement>
     <StandardProfile:Refine xmi:id="180002" base_Abstraction="80002" />
-    <SysML:Requirement xmi:id="160004" base_Class="60004" >
+    <SysML:Requirement xmi:id="160004" base_NamedElement="60004" >
         <id>160004</id>
         <text>
             The operating system shall boot in 1 second
         </text>
     </SysML:Requirement>
     <StandardProfile:Refine xmi:id="180004" base_Abstraction="80004" />
-    <SysML:Requirement xmi:id="160005" base_Class="60005" >
+    <SysML:Requirement xmi:id="160005" base_NamedElement="60005" >
         <id>160005</id>
         <text>
             The application shall start up in 1 second
